# memoryHub

./: .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE-DECISIONS.md  ARCHITECTURE.md  ATTRIBUTIONS.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  E21_AUDIT_REPORT.md  ENDPOINTS.md  IMPLEMENTATION_REPORT.md  LICENSE  MANIFEST-ru.md  MANIFEST.en.md  MANIFEST.md  MERGE_CONFLICTS_REPORT.md  MERGE_CONFLICT_ANALYSIS.md  MERGE_RESOLUTION_SUMMARY.md  MERGE_STATUS.md  Makefile  README-ru.md  README.en.md  README.md  README_EXPERIENCE_STORE.md  README_FACTUAL_MEMORY.md  SECURITY.md  SYSTEM.md  VERIFICATION.md  atman-setup.sh  demo.py  docker-compose.eval.yml  docker-compose.yml  document.html  fix_tests_script.py  full_demo.sh  go.mod  go.sum  (+6 more)
.cursor/: README.md  SYNC_GUIDE.md  local-agent-master-prompt.md
.cursor/rules/: playbook-markers.mdc
.github/: dependabot.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: general.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/prompts/: pr-checklist.prompt.yml  sysmap-hint.prompt.yml
.github/workflows/: ci.yml  cursor-issue-intake.yml  dependency-audit.yml  devin-issue-trigger-setup.md  devin-issue-trigger.yml  isolation-guard.yml  pages.yml  playbook-sync.yml  pr-checklist.yml  system-map-hint.yml  test.yml
agent/: __init__.py  atman_agent.py  config.py
api/: main.go
api/handlers/: graph.go  health.go  memory.go  trust.go
api/middleware/: auth.go  logging.go  ratelimit.go
api/models/: agent.go  errors.go  memory.go
atman_agent_cli/: AGENT_PLAN.md  README.md  RUNBOOK.md  pyrightconfig.json
atman_agent_cli/tasks/: AGENT-1-executor.md  AGENT-2-rag-core.md  AGENT-3-providers-and-rerank.md  AGENT-4-new-modules.md  AGENT-5-queue-and-statusbar.md  AGENT-6-backend-misc.md  AGENT-7-cli-integration.md
between_sessions/: BetweenSessions_spec.md
config/: config.go  defaults.yaml  memoryhub.config.yaml
db/: schema.sql
db/migrations/: 001_init.sql  002_trust.sql  003_graph.sql
deploy/: atman-setup.sh  УСТАНОВКА.md
docker/: .env.example  Dockerfile  docker-compose.yml
docs/: API.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  WP-affect-detector.md  demo.htm  demo.html  document.html  index.html  reflective-session-protocol.md  secure-contact-vault.md
docs/architecture/: BACKGROUND-AGENT.md  EMBEDDING-ru.md  EMBEDDING.md  EVAL_STORAGE.md  PROD_EVAL_BOUNDARY.md  REFLECTIONS.md  REFLECTION_FUTURE.md  SESSION_LIFECYCLE.md  SYSTEM 0.00.md  SYSTEM-ru.md  SYSTEM.en.md  SYSTEM.md  SYSTEM_MAP-ru.md  SYSTEM_MAP.md
docs/content/: COMPARISON.md  README-ru.md  README.md  SYSTEM.md
docs/development/: CLOUD_AGENT_ENVIRONMENT.md  DEVELOPMENT_STANDARD.md  GITHUB_AUTOMATIONS.md  MEMORY-ARCHITECTURE.md  PLAYBOOK_MARKERS.md  README.md  README_FACTUAL_MEMORY.md  ROADMAP.md
docs/ideas/: ATMAN_MEMORY_AND_LINGUISTIC_FINAL_v3.md  project-blocks-after-manifest-and-system.md  skill-manager-design.md
docs/research/: ATMAN_INTEGRATION_RESEARCH.md  RESEARCH_FACTUAL_MEMORY.md  agent-thinking-comparison-ru.md  agent-thinking-comparison.md  agent-ui-research.md  dashboard-research.md
e2e/: __init__.py  __main__.py  demo_atman.py  full_loop.py  generate_fixtures.py  live_scenario.py  llm.py  models.py  prompts.py  run_all.py  validation.py
e2e/scenarios/: session_lifecycle_interrupt.py  session_lifecycle_restart.py  session_lifecycle_timeout.py  test_restart_with_handoff.py  test_signal_interrupt.py  test_token_monitor.py  test_unexamined_facts.py  value_drift_under_pressure.py
emolex/source/: build_lexicons.py  golden_seed.tsv  improve_lexicon.py  improved_ru.tsv  run.sh  slang_emoji_en.tsv  test_emolex.py  validate.py
eval/migrations/: alembic.ini  env.py
fixtures/: README.md  affect_demo_responses.txt  eigenstate_sample.json  experience1_competence_challenge.json  experience2_value_conflict.json  experience3_surface_technical.json
fixtures/reflection/: experiences.json  identity.json
graph/: conflicts.go  entities.go  kuzu.go
lending/: MANIFEST.md  document.html
mcp/: resources.go  server.go  tools.go
migrations/versions/: 0001_create_reflections_table.sql  0002_create_facts_table.sql  0004_agent_schema.sql  0005_add_key_moments_table.sql  0006_entity_registry.sql  0006_self_applied_changes.sql  0007_entity_links_and_relations.sql  0007_pending_human_review.sql  (+11 more)
reports/: IMPLEMENTATION_REPORT.md  coverage-raw.txt  environment_setup_analysis.md  playbook-audit-2026-05-07.md  playbook-candidates.md  test-audit-2026-05-06.md  test-timings-raw.txt
scripts/: backup.sh  extract_playbook.py  migrate_embeddings.py  restore.sh  setup.sh  suggest_playbook.py  triage_agent.py  verify_environment.sh
skills/: memoryhub.md  search.md  trust.md
src/: demo.py  demo_eval_runner.py  demo_experience_store.py  demo_full_corpus.py  demo_identity.py  demo_reflection.py  demo_session_manager.py  demo_web_dashboard.py  full_demo.sh  run_agent.py
tasks/: TASK-flagembedding-native-sdk.md
tests/: __init__.py  api_test.go  conftest.py  graph_test.go  test_agent_config.py  test_ambient_memory_service.py  test_backend_interface.py  test_bm25_embedding.py  test_cli_all_commands.py  test_cli_factual_memory.py  test_cli_roundtrip.py  test_conflict_detector.py  test_cursor_issue_intake_workflow.py  test_daily_reflection_with_aggregators.py  test_demo_full_corpus.py  test_deploy_package.py  test_divergence_aggregator.py  test_divergence_event_persistence.py  test_domain_invariants.py  test_e2e_fixture_validation.py  test_e2e_full_cli.py  test_emotional_echo.py  test_entity_relations_formulator.py  test_entity_stance_formulator.py  test_eval_migrations.py  test_eval_storage_integration.py  test_experience_models.py  test_experience_service.py  test_experience_stores.py  test_factual_memory_entity_links.py  test_file_backend.py  test_file_state_store.py  test_findings_triage.py  test_golden_schema.py  test_identity_level_signals.py  test_identity_models.py  test_identity_service.py  test_in_memory_backend.py  test_in_memory_reflection_store.py  test_inline_validation_callbacks.py  (+75 more)
(+380 files in other folders)
