[project]
name = "atman"
version = "0.1.0"
description = "Психологический слой для AI-агента"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.11.0",
]

[project.scripts]
atman = "atman.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atman"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "SIM108", # ternary operator — readability preference
    "SIM115", # open-file-with-context-handler — NamedTemporaryFile(delete=False) is intentional
    "RUF001", # ambiguous unicode — project uses Cyrillic intentionally
    "RUF002", # ambiguous unicode in docstrings
    "RUF003", # ambiguous unicode in comments
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B017"]  # pytest.raises(Exception) is acceptable in tests

[tool.ruff.lint.isort]
known-first-party = ["atman"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
