[project]
name = "atman"
version = "0.1.0"
description = "Психологический слой для AI-агента"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "pydantic>=2.0.0",
    "rich>=13.7.0",
    "textual>=0.86.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.11.0",
    "pyright>=1.1.0",
    "bandit>=1.8.0",
    "pip-audit>=2.7.0",
    "pre-commit>=4.0.0",
    "streamlit>=1.30.0",
]
webui = [
    "streamlit>=1.30.0",
]
e2e = [
    "anthropic>=0.42.0",
]

[project.scripts]
atman = "atman.cli:main"
atman-experience = "atman.cli_experience:main"
atman-identity = "atman.cli_identity:main"
atman-dev = "atman.tui.app:main"
atman-web = "atman.web_dashboard:main"
devui = "atman.tui.app:main"
webui = "atman.web_dashboard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atman"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["atman"]
branch = true
omit = [
    "src/atman/cli.py",
    "src/atman/cli_experience.py",
    "src/atman/cli_identity.py",
    "src/atman/cli_reflection.py",
    "src/atman/core/ports/reflection.py",
    "src/atman/tui/app.py",
    "src/atman/tui/tests_tab.py",
    "src/atman/tui/features_tab.py",
    "src/atman/tui/docs_tab.py",
    "src/atman/tui/runner.py",
    "src/atman/web_dashboard/__init__.py",
    "src/atman/web_dashboard/app.py",
    "src/atman/web_dashboard/pages/**",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "pass",
]

[tool.bandit]
targets = ["src/atman"]
exclude_dirs = ["tests"]
skips = ["B101", "B108"]

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "standard"
venvPath = "."
include = ["src", "tests", "e2e"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "e2e"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "SIM108", # ternary operator — readability preference
    "SIM115", # open-file-with-context-handler — NamedTemporaryFile(delete=False) is intentional
    "RUF001", # ambiguous unicode — project uses Cyrillic intentionally
    "RUF002", # ambiguous unicode in docstrings
    "RUF003", # ambiguous unicode in comments
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B017"]  # pytest.raises(Exception) is acceptable in tests

[tool.ruff.lint.isort]
known-first-party = ["atman"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
